# pray

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  Prayfile  README.md  SECURITY.md  SPEC.md  deny.toml
.agents/: project.md
.agents/skills/engineering-audit/: SKILL.md
.agents/skills/prayer-publisher/: SKILL.md
.agents/tech-audit/: engineering-audit.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  spec_feedback.yml
.github/workflows/: ci.yml  scorecard.yml
crates/pray-bench/: Cargo.toml
crates/pray-bench/benches/: operations.rs
crates/pray-bench/src/: lib.rs
crates/pray-bench/tests/: scaling.rs
crates/pray-cli/: Cargo.toml
crates/pray-cli/src/: apply_report.rs  auth_client.rs  cli_release.rs  help.rs  invocation.rs  main.rs  revision.rs  revision_backend.rs  server.rs  server_stdio.rs  trust_command.rs
crates/pray-cli/tests/: auth.rs  cli_upgrade.rs  cli_ux.rs  environment_cli.rs  init_commands.rs  install.rs  install_beta_e2e.rs  install_confess.rs  install_distribution_point.rs  install_distribution_point_support.rs  install_drift.rs  install_git_global_cache.rs  install_network.rs  install_network_support.rs  install_package.rs  install_publish.rs  install_reports.rs  install_ssh_stdio.rs  install_support.rs  install_sync.rs  install_sync_discovery.rs  install_update.rs  install_validation.rs  login.rs  login_support.rs  revision.rs  session_migration.rs  session_migration_support.rs  trust.rs  version.rs
crates/pray-cli/tests/support/: distribution_point_smoke.rb
crates/pray-core/: Cargo.toml
crates/pray-core/src/: auth.rs  cli_release.rs  cli_suggest.rs  config.rs  constraint.rs  derived_metadata.rs  dotenv.rs  environment.rs  error.rs  hashing.rs  lib.rs  literal.rs  lockfile.rs  manifest.rs  package_spec.rs  project_context.rs  registry.rs  render.rs  resolve.rs  resolve_context.rs  ssh_client.rs  ssh_identity.rs  ssh_publishers.rs  ssh_rpc.rs  terminal.rs  trust.rs  verify.rs
crates/pray-core/src/client_trust/: commands.rs  enforce.rs  feed.rs  git.rs  home.rs  import_registry.rs  mod.rs  policy.rs  prompt.rs  ssh_host.rs
crates/pray-core/tests/: client_trust.rs  derived_metadata.rs  environment_render.rs  parser.rs  registry.rs  resolve_context.rs  schema_validation.rs  ssh_identity.rs
crates/pray-transport/: Cargo.toml
crates/pray-transport/src/: federation.rs  http.rs  lib.rs  p2p.rs  registry.rs  ssh.rs  torrent.rs  types.rs
docs/: distribution-architecture.md  p2p-s2s-summary.md  serve-platforms.md
docs/changelogs/: 20260627104529_zero_trust_render_verification.md  20260630170000_vcs_distribution_git_install_and_init_namespaces.md  20260630183000_prayers_folder_distribution_root.md  20260701085435_beta_e2e_gap.md
docs/deployments/: cloudflare.md  dokku.md  flyio.md  heroku.md  hetzner.md  pray.Dockerfile  ssh.md
docs/issues/: 20260625102047_initial_rust_reference_cli.md  20260625172844_drift_sections_and_offline_install.md  20260626170000_self_regulated_trust_auth_signing.md  20260626183000_torrent_seeding_and_collective_dht_distribution.md  20260626200000_lessons_from_graphql_protobuf_grpc.md  20260629140756_canonical_verification_records.md
examples/: README.md
examples/customized-render/: CHECKLIST.md  Prayfile
examples/customized-render/agent/local/: project.md  security.md
examples/simple-project/: INSTRUCTIONS.md  Prayfile
examples/simple-project/agent/local/: project.md
examples/team-workflow/: INSTRUCTIONS.md  Prayfile  REVIEW.md
examples/team-workflow/.agents/: testing.md
examples/team-workflow/agent/local/: project.md
npmjs/pray-cli/: .libyearrc.json  CHANGELOG.md  README.md  biome.json  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
npmjs/pray-cli/src/: constraint.test.ts  constraint.ts  environment.test.ts  environment.ts  errors.ts  git-distribution.integration.test.ts  hashing.test.ts  hashing.ts  index.ts  install-git-global-cache.integration.test.ts  install.integration.test.ts  library.test.ts  lockfile.test.ts  parser.test.ts  project-context.test.ts  render-environment.test.ts  terminal.ts  trust.test.ts  validation.ts
npmjs/pray-cli/src/archive/: praypkg.ts
npmjs/pray-cli/src/cli/: help.test.ts  help.ts  invocation.test.ts  invocation.ts  main.ts  materialize.ts  (+1 more)
rubygems/: README.md
rubygems/pray-cli/: .gitignore  .rspec_status  .rubocop.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  SECURITY.md  pray-cli.gemspec
rubygems/pray-cli/lib/: pray-cli.rb  pray.rb
rubygems/pray-cli/spec/: spec_helper.rb
schema/: lockfile.schema.json  manifest.schema.json  package.schema.json  registry.schema.json
spec/: README.md
usr/docs/changelogs/: 20260625102047_initial_rust_reference_cli.md  20260625172844_drift_sections_and_offline_install.md  20260626150000_pray_serve_confess_distribution_point.md  20260626162420_server_to_server_federation_protocol.md  20260626163000_pray_publish_signing_distribution_point.md  20260626174500_pray_registry_trust_policy.md  20260626200000_graphql_protobuf_grpc_lessons.md  20260626202000_pluggable_transport_layer.md  20260627103243_minimal_text_packages_and_derived_metadata.md  20260629140756_canonical_verification_records.md  20260630153000_vcs_backed_revisioning_and_remote_storage.md  20260714170000_environment-cli-git-refresh.md
usr/docs/issues/: 20260626193000_server_to_server_federation_protocol.md  20260626194500_xmpp_dns_discovery_for_federation.md  20260626202000_pluggable_transport_layer.md  20260627103243_minimal_text_packages_and_derived_metadata.md  20260627104529_zero_trust_render_verification.md  20260629150000_production_readiness_milestone_plan.md  20260629153000_production_readiness_checklist.md  20260630121500_vcs_backed_revisioning_and_remote_storage.md  20260705203300_ssh_native_distribution_transport.md  20260705204000_bundler_cargo_mix_findings.md  20260714100000_clig-dev-cli-audit.md  20260714120000_environment-aware-pray.md
(+116 files in other folders)
