[workspace]
members = [
  "crates/pray-core",
  "crates/pray-cli",
  "crates/pray-transport",
  "crates/pray-bench",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Andrei Makarov <contact@kiskolabs.com>"]
repository = "https://github.com/kiskolabs/pray"
homepage = "https://pray.kisko.dev"
