[package]
name = "pray-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Benchmarks for pray-core operations"
publish = false

[dependencies]
pray-core = { path = "../pray-core" }
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "operations"
harness = false
