[package]
name = "pray"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pray-core = { path = "../pray-core" }
pray-transport = { path = "../pray-transport" }
base64 = "0.22"
ed25519-dalek = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
zstd = "0.13"
ureq = "3"
tokio = { version = "1", features = ["full"] }
