[package]
name = "pray"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Reference pray CLI for Prayfile install, publish, sync, and verification"

[dependencies]
pray-core = { path = "../pray-core" }
pray-transport = { path = "../pray-transport" }
base64 = "0.22"
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
zstd = "0.13"
ureq = "2"
tokio = { version = "1", features = ["full"] }
