[package]
name = "pray-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.11"
base64 = "0.22"
ed25519-dalek = "3"
rusqlite = { version = "0.40", features = ["bundled"] }
tar = "0.4"
toml = "1.1"
zstd = "0.13"
