[package]
name = "pray-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Prayfile parsing, resolution, lockfiles, and registry artifacts"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tar = "0.4"
toml = "0.8"
zstd = "0.13"

[dev-dependencies]
jsonschema = "0.29"
