[package]
name = "pray-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP, federation, and transport adapters for pray distribution points"

[dependencies]
async-trait = "0.1"
anyhow = "1"
pray-core = { path = "../pray-core" }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[features]
default = ["http"]
http = []
p2p = []
torrent = []
filesystem = []
all = ["http", "p2p", "torrent", "filesystem"]

[dev-dependencies]
tokio-test = "0.4"
